# Eusociety

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DOCUMENTATION.md  Goals.md  Milestone2.2Plan.md  Milestones.md  README.md  config-json.json  config.json  output.json  stress_config.json
backend/: Cargo.toml
backend/config/: test.json
backend/src/: main.rs  ws_server.rs
backend/src/simulation/: config.rs  engine.rs  entity.rs  mod.rs  particle.rs  registry.rs
backend/src/simulation/entity/: mod.rs  particle.rs
backend/src/simulation/field/: mod.rs  scalar_field.rs
backend/src/simulation/transport/: mod.rs  websocket.rs
docs/: ARCHITECTURE.md  Documentation.md  MILESTONES.md  Milestone1Plan.md  Milestone2.3Plan.md  Milestone2.4Plan.md  Milestone2.5Plan.md  Milestone2Plan.md  Phase1_FoodOptimizationPlan.md  Phase2.md  PheromoneRefactorPlan.md  WallImplementationPlan.md
eusociety-config/: Cargo.toml
eusociety-config/src/: lib.rs
eusociety-core/: Cargo.toml
eusociety-core/src/: component.rs  entity.rs  lib.rs  resources.rs  scheduler.rs  system.rs  world.rs
eusociety-core/src/ecs/: mod.rs  query.rs  scheduler.rs  system.rs  system_param.rs
eusociety-macros/: Cargo.toml
eusociety-macros/src/: lib.rs
eusociety-runner/: Cargo.toml
eusociety-runner/src/: main.rs
eusociety-simulation/: Cargo.toml
eusociety-simulation/src/: lib.rs
eusociety-transport/: Cargo.toml
eusociety-transport/src/: lib.rs
frontend/: index.html  main.js  oldproject.js  style.css
frontend/shaders/: fragment.glsl  vertex.glsl
src/: lib.rs  main.rs
src/config/: mod.rs  types.rs
src/simulation/: mod.rs  spatial.rs
src/simulation/components/: mod.rs
src/simulation/resources/: mod.rs
src/simulation/systems/: ant_logic.rs  ant_movement.rs  ant_setup.rs  boundary.rs  environment_setup.rs  mod.rs  movement.rs  pheromones.rs  randomization.rs  setup.rs  state_export.rs  transport.rs  transport_integration.rs  wall_collision.rs
src/transport/: delta_compression.rs  mod.rs  sender.rs  serializer.rs  websocket.rs
