[package]
name = "eusociety"
version = "0.1.0"
edition = "2021"
authors = ["Kulkarni Venugopal Vasant"]
repository = "https://github.com/Vorld/eusociety"
license = "GPL-3.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Randomization
rand = "0.8"

# Entity Component System
bevy_ecs = "0.15.3"

# WebSocket support
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "net", "time", "sync"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10.0"
