[package]
name = "eusociety"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"  # this is usually pulled in, but you can declare it explicitly if needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
bincode = "1.3"
futures-util = "0.3"
rayon = "1.8"
once_cell = "1.21"