[package]
name = "eusociety-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eusociety-core = { path = "../eusociety-core" } # Need Position type potentially
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true # For custom errors
