[package]
name = "eusociety-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.7"  # For parallel system execution in future iterations
thiserror = "1.0"  # For better error handling
uuid = { version = "1.3", features = ["v4", "serde"] }  # Alternative to custom entity IDs
