[package]
name = "eusociety-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true # For deriving Serialize/Deserialize on Position, World, etc.
eusociety-macros = { path = "../eusociety-macros" }
