[package]
name = "eusociety-macros"
version.workspace = true
edition.workspace = true
# Inherit other workspace fields if desired (authors, license, etc.)
# authors.workspace = true
# license.workspace = true
# repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
