[package]
name = "eusociety-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# This is the main binary crate
[[bin]]
name = "eusociety"
path = "src/main.rs"

[dependencies]
eusociety-core = { path = "../eusociety-core" }
eusociety-config = { path = "../eusociety-config" }
eusociety-transport = { path = "../eusociety-transport" }
eusociety-simulation = { path = "../eusociety-simulation" }

spin_sleep.workspace = true # For frame pacing
thiserror.workspace = true # For error handling
log.workspace = true # Optional: for logging status
env_logger = "0.10" # Optional: simple logger implementation
