[package]
name = "eusociety-simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eusociety-core = { path = "../eusociety-core" }
eusociety-macros = { path = "../eusociety-macros" } # Added dependency
rand.workspace = true
log.workspace = true
