[package]
name = "eusociety-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
eusociety-core = { path = "../eusociety-core" }
eusociety-simulation = { path = "../eusociety-simulation" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"  # For binary serialization
bincode = "1.3"  # Efficient binary serialization
thiserror = "1.0"  # Better error handling
bytes = "1.4"  # Efficient byte buffer manipulation
tokio = { version = "1.28", features = ["full"], optional = true }  # Async runtime for WebSocket
tokio-tungstenite = { version = "0.18", optional = true }  # WebSocket implementation
futures = { version = "0.3", optional = true }  # Future utilities for WebSocket

[features]
default = []
websocket = ["tokio", "tokio-tungstenite", "futures"]
