[package]
name = "eusociety-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eusociety-core = { path = "../eusociety-core" } # Need World type
serde.workspace = true # Needed by bincode potentially
bincode.workspace = true
thiserror.workspace = true
serde_json.workspace = true # For parsing options
log = { workspace = true } # Added for debug logging

[dev-dependencies]
tempfile = "3.8" # For tests
